# unimelb-teaching-tools

./: .gitignore  README.md  config.ini.sample  pyproject.toml  requirements.txt
add_global_fudge_points/: fudge_point.py
autograding/autograding-docker-image/: Dockerfile  build.sh  docker-entrypoint  run_docker_check.sh  run_docker_style.sh  run_over_submissions.sh
autograding/example1/: __init__.py  run_check50.sh
autograding/example1/data/: output_794901.txt  output_794904.txt  q2_driver.c  q3_driver.c
change_question_score/: change_question_score.py  rubric.py.sample
code_to_pdf/: render.sh
download_quiz_questions/: downloader.py
get_files/: config.ini
get_grader_breakdown/: config.ini  grader_breakdown.py
get_scores_grok/: get_scores_api.py
grade_coding_quiz/: grader.py  rubric.py
migrate-grok-ed/: .gitignore  README.md  arrange-files.py  arrange_files.py  convert-grok.py  convert_grok.py  preprocess-markdown.py  preprocess_markdown.py  pyproject.toml  scrape-grok.py  scrape_grok.py  upload.py  utils.py
migrate-grok-ed/amber/amber-util/: DocumentBuilder.js  DocumentFormat.js  HTMLDocumentFormat.js  convert.js  index.js  package.json
migrate-grok-ed/amber/amber-util-server/: index.js  package.json
migrate-grok-ed/challenge/: __init__.py
migrate-grok-ed/config/: config_busa90539.ini  config_comp10001.ini  config_comp30020.ini  config_comp90059.ini
migrate-grok-ed/grok_problem/: __init__.py
migrate-grok-ed/grok_test/: __init__.py
migrate-grok-ed/lesson/: __init__.py
migrate-grok-ed/sample-jsons/: get_challenge.json  get_slide.json  grok_module.json  patch_challenge.json  post_module.json  post_slide.json  put_lesson.json  put_slide.json
migrate-grok-ed/slide/: __init__.py
quiz_questions_to_csv/: README  questions_to_csv.py
students_to_csv/: config.ini  get_students.py
utils/: __init__.py
