[tool.poetry]
name = "convert-grok-to-ed"
version = "0.1.0"
description = ""
authors = ["Shaanan Cohney <shaananc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.25.1"
ipdb = "^0.13.7"
cachier = "^3.0.0"
rich = "^10.1.0"
tqdm = "^4.60.0"
selenium = "^3.141.0"
requests-futures = "^1.0.0"
beautifulsoup4 = "^4.11.1"
jsondiff = "^2.0.0"
yaml2pyclass = "^0.1.1"
marshmallow-dataclass = "^8.5.11"
pydantic = "^1.10.4"
markdown = "^3.4.1"
unidecode = "^1.3.6"
retrying = "^1.3.4"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
vulture = "^2.3"
prospector = "^1.3.1"
ipython = "^8.8.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
