[tool.poetry]
name = "migrate-grok-ed"
version = "0.1.0"
description = ""
authors = ["Shaanan Cohney <shaananc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cachier = "^3.0.0"
selenium = "^4.21.0"
requests = "^2.32.3"
rich = "^13.7.1"
tqdm = "^4.66.4"
requests-futures = "^1.0.1"
markdown = "^3.6"
jsondiff = "^2.0.0"
unidecode = "^1.3.8"
marshmallow = "^3.21.3"
marshmallow-dataclass = "^8.6.1"
retrying = "^1.3.4"
pydantic = "^2.7.3"
yaml2pyclass = "^0.1.1"
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
